adding some mobile functionality for viewing purposes

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -3,7 +3,10 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  font-family: sans-serif;
+
+
+  
+ 
   
 }
 
@@ -50,4 +53,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+@media (max-width: 500px){
+  .App{
+    padding: 0;
+    
+  }
+
 }
