--- a/client/src/components/util-components/imagecycle.module.scss
+++ b/client/src/components/util-components/imagecycle.module.scss
@@ -1,8 +1,7 @@
 
 .root{
 
-    height: 700px;
-    width: 900px;
+
     display: flex;
        flex-direction: column;
        align-items: center;
@@ -57,6 +56,34 @@
     justify-content: center;
     padding: 1rem;
 }
+
+@media screen and (max-width: 500px) {
+  .root {
+      height: auto;
+      width: auto;
+      padding: 2rem;
+  }
+
+  .button-container button {
+      font-size: 1rem;
+  }
+
+  .current-image {
+      height: 100px; /* Adjust the height as needed */
+      width: 100px; /* Adjust the width as needed */
+  }
+
+  .image-container {
+      height: auto;
+      width: auto;
+  }
+}
+
+
+
+
+
+
 }
 
 
@@ -93,5 +120,6 @@
         width: 300px;
     }
 
+  
 
 }
