--- a/client/src/components/util-components/imageupload.module.scss
+++ b/client/src/components/util-components/imageupload.module.scss
@@ -72,3 +72,27 @@
     background-color: #e7e6de;
 }
 
+
+
+
+
+@media (max-width: 500px){
+
+    .current-image{
+        width: 100%;
+        height: 100px;
+        object-fit: scale-down;
+    }
+    .image-preview{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px 15px 0 0;
+    }
+    .initial-image{
+        width: 100%;
+        height: 100px;
+        object-fit: scale-down;
+    }
+
+ }
